--- a/app/src/main/res/layout/activity_game_fail.xml
+++ b/app/src/main/res/layout/activity_game_fail.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@drawable/friend_get_fail"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
