--- a/app/src/main/res/layout/activity_shake.xml
+++ b/app/src/main/res/layout/activity_shake.xml
@@ -12,7 +12,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
-        android:background="@color/black"
+        android:background="@color/text_blue"
         android:orientation="vertical" >
 
         <Button
