# Decipher Stranger # ServicePage # Created by penghaitao 5/7

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="功能"
+                android:text="服务"
                 android:textColor="@color/text_hint"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
