--- a/app/src/main/res/layout/game_dialog_settings.xml
+++ b/app/src/main/res/layout/game_dialog_settings.xml
@@ -14,13 +14,13 @@
 
         <TextView
             android:id="@+id/setting_title"
-            style="@style/text_18_ffffff"
             android:background="@drawable/shape_dialog_title_bg"
             android:layout_width="fill_parent"
             android:layout_height="40.0dip"
             android:gravity="center"
             android:text="@string/gameSettings"
             android:textSize="24dp"
+            android:textColor="@color/white"
             android:visibility="visible"/>
 
         <LinearLayout
@@ -142,6 +142,7 @@
                 android:text="@string/confirm"
                 android:id="@+id/confirm"
                 android:textSize="22dp"
+                android:textColor="@color/black"
                 android:background="@drawable/dialog_confirm_btn"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
