--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,13 +6,14 @@
     <color name="translucent_grey">#b4a5a5a5</color>
     <color name="translucent_black">#b44b4b4b</color>
 
+    <color name="tab_blue">#ff04abff</color>
     <color name="text_blue">#ff1eb4ff</color>
     <color name="text_hint">#ff737373</color>
     <color name="page">#ffdcdcdc</color>
 
     <color name="red">#ffff0000</color>
     <color name="orange">#ffff570a</color>
-    <color name="black">#ff070707</color>
+    <color name="black">#ff000000</color>
     <color name="white">#ffffffff</color>
     <color name="silvery">#d4e7e6e5</color>
     <color name="grey">#ffbfbfbf</color>
