--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,7 +102,7 @@
                 android:id="@+id/moreImage"
                 android:layout_width="wrap_content"
                 android:layout_height="46dp"
-                android:src="@drawable/more_normal"
+                android:src="@drawable/service_normal"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
