# Decipher Stranger # MyApplication # Created by penghaitao 5/9

--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -32,9 +32,9 @@
             <ImageButton
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:id="@+id/imageButton"
+                android:id="@+id/portraitImage"
                 android:layout_margin="10dp"
-                android:background="@drawable/mypic"
+                android:background="@null"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true" />
             
@@ -69,7 +69,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我是小涛啊"
+                android:text=""
                 android:id="@+id/nameText"
                 android:textSize="18dp"
                 android:paddingRight="10dp"
@@ -106,8 +106,45 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="penghaitao918@.com"
+                android:text=""
                 android:id="@+id/accountText"
+                android:textSize="18dp"
+                android:paddingRight="10dp"
+                android:textColor="@color/text_hint"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/page"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/mainpage_btn_bg"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:text="@string/sex"
+                android:textSize="18dp"
+                android:textColor="@color/black"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:id="@+id/sexText"
                 android:textSize="18dp"
                 android:paddingRight="10dp"
                 android:textColor="@color/text_hint"
