--- a/app/src/main/res/layout/activity_game_rsp_set_grade.xml
+++ b/app/src/main/res/layout/activity_game_rsp_set_grade.xml
@@ -39,6 +39,7 @@
             android:text="@string/save"
             android:id="@+id/save_btn"
             android:textSize="16dp"
+            android:onClick="GradeSetOnClick"
             android:background="@drawable/tab_btn_bg"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
