--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,8 +24,8 @@
     <color name="font_value">#ff2f2f2f</color>
     <color name="blue">#ff2e7ac4</color>
     <color name="white_blue">#ff56c6ff</color>
-    <color name="green_white">#ff47e317</color>
-    <color name="green">#ff2b6e24</color>
+    <color name="green">#ff18b151</color>
+    <color name="white_green">#ff24d063</color>
     <color name="black_blue">#ff1e2e44</color>
     <color name="list_view_silvery">#ff22222b</color>
 
