--- a/app/src/main/res/drawable-xhdpi/dialog_confirm_btn.xml
+++ b/app/src/main/res/drawable-xhdpi/dialog_confirm_btn.xml
@@ -11,7 +11,7 @@
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="5dp"/>
-            <solid android:color="@color/green_white" />
+            <solid android:color="@color/white_green" />
         </shape>
     </item>
     
