--- a/app/src/main/res/layout/activity_main_contacts.xml
+++ b/app/src/main/res/layout/activity_main_contacts.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <com.android.decipherstranger.view.ClearEditText
         android:id="@+id/filter_edit"
         android:layout_marginTop="10dip"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/seabar_input"
@@ -12,60 +15,78 @@
         android:hint="请输入关键字"
         android:singleLine="true"
         android:textSize="15.0dip" />
-    <FrameLayout
-        android:layout_width="fill_parent"
+
+    <com.android.decipherstranger.view.SideBar
+        android:id="@+id/sidrbar"
+        android:layout_width="30dp"
         android:layout_height="fill_parent"
-        android:layout_marginTop="10dip">
-        <LinearLayout
-            android:layout_width="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/filter_edit" />
+
+    <RelativeLayout
+        android:id="@+id/new_friends"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/filter_edit"
+        android:layout_toLeftOf="@+id/sidrbar"
+        android:layout_toStartOf="@+id/sidrbar">
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/new_friends">
-            <ImageView
-                android:layout_width="50dip"
-                android:layout_height="50dip"
-                android:src="@drawable/friends_request_icon"/>
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <com.android.decipherstranger.view.HandyTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dip"
-                    android:textSize="20dip"
-                    android:textColor="#336598"
-                    android:text="@string/new_friend"
-                    android:layout_alignTop="@+id/friends_request_count" />
-                <com.android.decipherstranger.view.BadgeView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/friends_request_count"
-                    android:layout_marginEnd="51dp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true" />
-            </RelativeLayout>
-        </LinearLayout>
+            android:id="@+id/imageView"
+            android:src="@drawable/friends_request_icon"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
         <TextView
-            android:id="@+id/dialog"
-            android:layout_width="80.0dip"
-            android:layout_height="80.0dip"
-            android:layout_gravity="center"
-            android:background="@drawable/show_head_toast_bg"
-            android:gravity="center"
-            android:textColor="#ffffffff"
-            android:textSize="30.0dip"
-            android:visibility="invisible" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="20dip"
+            android:textColor="#336598"
+            android:text="@string/new_friend"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/imageView"
+            android:layout_toEndOf="@+id/imageView"
+            android:layout_marginLeft="10dp"/>
 
-        <com.android.decipherstranger.view.SideBar
-            android:id="@+id/sidrbar"
-            android:layout_width="30.0dip"
-            android:layout_height="fill_parent"
-            android:layout_gravity="right|center" />
+        <com.android.decipherstranger.view.BadgeView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/friends_request_count"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp" />
 
-        <ListView
-            android:id="@+id/contact_list"
-            android:layout_width="fill_parent"
-            android:layout_height="450dp"
-            android:layout_gravity="center_horizontal|bottom"
-            android:divider="@null" />
-    </FrameLayout>
-</LinearLayout>
+    </RelativeLayout>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/contact_list"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/new_friends"
+        android:layout_toLeftOf="@+id/sidrbar"
+        android:layout_toStartOf="@+id/sidrbar" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="A"
+        android:id="@+id/dialog"
+        android:textSize="100dp"
+        android:gravity="center"
+        android:background="@color/gray"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
