--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -102,20 +102,23 @@
                     android:layout_toStartOf="@+id/btn_send" />
 
             </RelativeLayout>
-
-            <TextView
-                android:id="@+id/btn_rcd"
+            <com.android.decipherstranger.view.AudioRecorderButton
+                android:id="@+id/recorder_button"
                 android:layout_width="fill_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/ivPopUp"
-                android:background="@drawable/chat_send_btn"
+                android:text="@string/str_recorder_normal"
+                android:background="@drawable/btn_recorder_normal"
+                android:textColor="#727272"
+                android:minHeight="40dp"
+                android:padding="5dp"
                 android:gravity="center"
-                android:text="按住说话"
-                android:visibility="gone" />
+                android:visibility="gone">
+            </com.android.decipherstranger.view.AudioRecorderButton>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -149,18 +152,4 @@
         android:dividerHeight="5dp"
         android:scrollbarStyle="outsideOverlay"
         android:stackFromBottom="true" />
-    <!-- 录音显示UI层-->
-    <LinearLayout
-        android:id="@+id/rcChat_popup"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:visibility="gone" >
-
-        <include
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            layout="@layout/voice_rcd_hint_window" />
-    </LinearLayout>
 </RelativeLayout>
