--- a/app/src/main/res/layout/chatting_item_msg_text_right.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_right.xml
@@ -33,29 +33,42 @@
 	           android:id="@+id/iv_userhead" 
 	           android:layout_width="52dp"
 		       android:layout_height="52dp"
-	           android:focusable="false" 
+	           android:focusable="false"
 	           android:layout_alignParentRight="true" 
                android:layout_alignParentTop="true" 
 	           android:background="@drawable/shuaige"/>
- 				
+				<FrameLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:id="@+id/recorder_length"
+					android:background="@drawable/chatto_bg_normal"
+					android:layout_toLeftOf="@+id/iv_userhead"
+					android:visibility="gone">
+					<View
+						android:id="@+id/recorder_anim"
+						android:layout_width="25dp"
+						android:layout_height="25dp"
+						android:layout_gravity="right|center_vertical"
+						android:background="@drawable/adj">
+					</View>
+				</FrameLayout>
 			<TextView
-	            android:id="@+id/tv_chatcontent" 
-	            android:layout_toLeftOf="@id/iv_userhead"
-	            android:layout_marginRight="10dp"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:background="@drawable/chatto_bg"
-	            android:textSize="15sp"
-	            android:textColor="#ff000000"
-	            android:gravity="left|center"
-	            android:minHeight="50dp" 
-	            android:lineSpacingExtra="2dp"
-	            android:clickable="true"
-	            android:focusable="true"/>
-
+				android:id="@+id/tv_chatcontent"
+				android:layout_toLeftOf="@id/iv_userhead"
+				android:layout_marginRight="10dp"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:background="@drawable/chatto_bg_normal"
+				android:textSize="15sp"
+				android:textColor="#ff000000"
+				android:gravity="left|center"
+				android:minHeight="50dp"
+				android:lineSpacingExtra="2dp"
+				android:clickable="true"
+				android:focusable="true" />
 			<TextView
 	            android:id="@+id/tv_time"
-	            android:layout_toLeftOf="@id/tv_chatcontent"
+	            android:layout_toLeftOf="@id/recorder_length"
 	            android:layout_marginRight="10dp"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -66,19 +79,19 @@
 	            android:lineSpacingExtra="2dp"
 	            android:clickable="true"
 	            android:focusable="true"/>
-	                 
-	                  
-	            <TextView 
-	            android:id="@+id/tv_username" 
+
+
+	            <TextView
+	            android:id="@+id/tv_username"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_below="@id/iv_userhead"
 	            android:layout_alignParentRight="true"
-	            android:layout_toRightOf="@id/tv_chatcontent"
+	            android:layout_toRightOf="@id/recorder_length"
 	            android:textSize="15sp"
 	            android:gravity="center"
 	            android:textColor="#818181"/>
-	        
+
 	    </RelativeLayout>
 
 </LinearLayout>
