--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,9 +27,9 @@
     </style>
     <style name="chat_text_date_style">
         <item name="android:padding">2dp</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:background">#bfbfbf</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 
@@ -48,5 +48,13 @@
         <item name="android:textColor">#818181</item>
         <item name="android:textSize">15sp</item>
         <item name="android:gravity">center</item>
+    </style>
+    
+    <style name="Theme_AudioDialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 </resources>
