聊天界面封装

--- a/app/src/main/res/layout/chatting_item_msg_text_right.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_right.xml
@@ -16,9 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:textColor="#ffffff"
+            android:textColor="@color/black"
             android:textSize="12sp"
-            android:background="#bfbfbf"/>
+            android:background="@color/transparent"/>
 	        
 	    </LinearLayout>
 	
