--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -4,226 +4,236 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/LinearLayout1"
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_marginTop="16dp">
-
-        <RelativeLayout
-            android:id="@+id/myPortrait"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="MePageOnClick"
-            android:background="@drawable/mainpage_btn_bg"
-            android:layout_gravity="center_horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="15dp"
-                android:textSize="18dp"
-                android:text="@string/portrait"
-                android:textColor="@color/black"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true" />
-
-            <ImageButton
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:id="@+id/portraitImage"
-                android:layout_margin="10dp"
-                android:background="@null"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true" />
-            
-        </RelativeLayout>
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:layout_above="@+id/button">
 
         <LinearLayout
+            android:id="@+id/LinearLayout1"
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/page"/>
-
-        <RelativeLayout
-            android:id="@+id/myName"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="MePageOnClick"
-            android:background="@drawable/mainpage_btn_bg"
-            android:layout_gravity="center_horizontal">
+            android:background="@color/white"
+            android:layout_marginTop="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/myPortrait"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="@string/name"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true" />
+                android:onClick="MePageOnClick"
+                android:background="@drawable/mainpage_btn_bg"
+                android:layout_gravity="center_horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
+                    android:textSize="18dp"
+                    android:text="@string/portrait"
+                    android:textColor="@color/black"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true" />
+
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/portraitImage"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/page"/>
+
+            <RelativeLayout
+                android:id="@+id/myName"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/nameText"
-                android:textSize="18dp"
-                android:paddingRight="10dp"
-                android:textColor="@color/text_hint"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true" />
-            
-        </RelativeLayout>
+                android:onClick="MePageOnClick"
+                android:background="@drawable/mainpage_btn_bg"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/name"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:id="@+id/nameText"
+                    android:textSize="18dp"
+                    android:paddingRight="10dp"
+                    android:textColor="@color/text_hint"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/page"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/mainpage_btn_bg"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/account_lab"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:id="@+id/accountText"
+                    android:textSize="18dp"
+                    android:paddingRight="10dp"
+                    android:textColor="@color/text_hint"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/page"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/mainpage_btn_bg"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/sex"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:id="@+id/sexText"
+                    android:textSize="18dp"
+                    android:paddingRight="10dp"
+                    android:textColor="@color/text_hint"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/LinearLyout2"
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/page"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/mainpage_btn_bg"
-            android:layout_gravity="center_horizontal">
+            android:layout_below="@+id/LinearLayout1"
+            android:background="@color/white"
+            android:layout_marginTop="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="@string/account_lab"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true" />
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/accountText"
-                android:textSize="18dp"
-                android:paddingRight="10dp"
-                android:textColor="@color/text_hint"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/sound"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true" />
 
-        </RelativeLayout>
+                <Switch
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/switch1"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/page"/>
+            </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/mainpage_btn_bg"
-            android:layout_gravity="center_horizontal">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/page"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="@string/sex"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true" />
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:id="@+id/sexText"
-                android:textSize="18dp"
-                android:paddingRight="10dp"
-                android:textColor="@color/text_hint"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:text="@string/shake_effect"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true" />
 
-        </RelativeLayout>
-        
-    </LinearLayout>
+                <Switch
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/switch2"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp" />
 
-    <LinearLayout
-        android:id="@+id/LinearLyout2"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/LinearLayout1"
-        android:background="@color/white"
-        android:layout_marginTop="16dp">
+            </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="@string/sound"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true" />
-
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/switch1"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp" />
-            
-        </RelativeLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/page"/>
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:text="@string/shake_effect"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true" />
-
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/switch2"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp" />
-            
-        </RelativeLayout>
-        
-    </LinearLayout>
-
+    </RelativeLayout>
     <Button
+        
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:id="@+id/button"
@@ -233,11 +243,8 @@
         android:text="@string/main_quit"
         android:onClick="MePageOnClick"
         android:background="@drawable/quit_btn_bg"
-        android:layout_below="@+id/LinearLyout2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
-
-
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp" />
 
 
 
