--- a/app/src/main/res/layout/game_dialog_settings.xml
+++ b/app/src/main/res/layout/game_dialog_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@null"
@@ -7,11 +7,13 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
         android:layout_gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:clickable="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/setting_title"
@@ -21,7 +23,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/setting"
-            android:textSize="26dp"
+            android:textSize="24dp"
             android:textColor="@color/white"
             android:visibility="visible"/>
 
@@ -29,7 +31,6 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_marginTop="2dp"
             android:background="@color/white">
 
             <LinearLayout
@@ -131,15 +132,21 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="2px"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/grey" />
+
             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_margin="5dp"
                 android:text="@string/confirm"
                 android:id="@+id/confirm"
                 android:textSize="22dp"
+                android:padding="6dp"
+                android:onClick="MenuOnClick"
                 android:textColor="@color/black"
                 android:background="@drawable/dialog_confirm_btn"
                 android:layout_centerVertical="true"/>
@@ -148,4 +155,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
